--- a/index.html
+++ b/index.html
@@ -3308,6 +3308,8 @@
         <input type="text" id="afterTaxRate" step="0.001" class="readonly" readonly>
     </div>
 
+    <div class="divider-flow"></div>
+
     <div class="input-button-group">
         <div class="row">
             <span class="label">推廣</span>
