--- a/index.html
+++ b/index.html
@@ -3370,11 +3370,13 @@
     <div class="row">
         <span class="label">佣後利率</span>
         <input type="text" id="afterCommissionOnlyRate" class="readonly" readonly>
+        <span style="margin-left: 0px; color: var(--text-color);">資貸</span>
     </div>
 
     <div class="row">
         <span class="label">稅佣後利率</span>
         <input type="text" id="afterCommissionRate" class="readonly" readonly>
+        <span style="margin-left: 0px; color: var(--text-color);">分期</span>
     </div>
 
     <div class="divider-flow"></div>
@@ -7335,7 +7337,7 @@
                     語言 <span class="menu-item-arrow">▶</span>
                 </li>
             </ul>
-            <div class="version-info">v2.88</div>
+            <div class="version-info">v2.89</div>
         </div>
     </div>
 
