--- a/index.html
+++ b/index.html
@@ -1568,6 +1568,27 @@
             background-color: rgba(255, 255, 255, 0.1);         /* 半透明背景 */
         }
 
+        /* 期數方案對比的關閉按鈕特殊樣式 */
+        #paymentComparisonModal .close-btn {
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(var(--error-color-rgb), 0.2);
+            border: 2px solid var(--error-color);
+        }
+
+        #paymentComparisonModal .close-btn:hover {
+            background-color: var(--error-color);
+            color: white;
+            transform: scale(1.1);
+        }
+
+        #paymentComparisonModal .close-btn:active {
+            transform: scale(0.95);
+        }
+
         /* 關閉按鈕懸停效果 - 鼠標懸停時的視覺變化 */
         .close-btn:hover {
             color: var(--accent-color);                         /* 強調色文字 */
@@ -3334,6 +3355,22 @@
             flex: 1;
             overflow-y: auto;
             background-color: var(--primary-color);
+            padding: 15px;
+            padding-bottom: 20px; /* 底部留一點空間 */
+        }
+
+        /* 確保表格能充分利用空間 */
+        #paymentComparisonModal table {
+            margin-bottom: 20px;
+        }
+
+        /* 調整標題區域樣式 */
+        #paymentComparisonModal .modal-header {
+            position: sticky;
+            top: 0;
+            background-color: var(--secondary-color);
+            z-index: 100;
+            box-shadow: 0 2px 4px var(--shadow-color);
         }
 
         #paymentComparisonModal .modal-footer {
@@ -5530,7 +5567,7 @@
             <h3>貸款方案比較</h3>
             <button class="close-btn" onclick="closeLoanComparisonModal()">×</button>
         </div>
-        <div class="modal-content" style="max-height: 70vh; overflow-y: auto;">
+        <div class="modal-content" style="flex: 1; overflow-y: auto;">
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <th style="text-align: left; padding: 8px; border-bottom: 1px solid var(--border-color);">項目</th>
@@ -6501,18 +6538,17 @@
         const modalHTML = `
         <div class="modal-header">
             <h3>不同期數方案對比</h3>
-            <button class="close-btn" onclick="closeCustomModal('paymentComparisonModal')">×</button>
+            <button class="close-btn" onclick="closeCustomModal('paymentComparisonModal')" title="關閉">
+                <span style="font-size: 28px; line-height: 1;">×</span>
+            </button>
         </div>
-        <div class="modal-content" style="max-height: 70vh; overflow-y: auto;">
+        <div class="modal-content" style="flex: 1; overflow-y: auto;">
             <div style="margin-bottom: 15px;">
                 <p>本金: ${formatNumberWithCommas(principal)} 元</p>
                 <p>利率: ${rate}%</p>
                 <p>以下是不同期數的還款方案對比，您可以點擊「選擇」套用到小朋友專用計算機</p>
             </div>
             ${tableHTML}
-        </div>
-        <div class="modal-footer">
-            <button class="modal-btn modal-btn-primary" onclick="closeCustomModal('paymentComparisonModal')">關閉</button>
         </div>
         `;
         
@@ -7930,7 +7966,7 @@
                     語言 <span class="menu-item-arrow">▶</span>
                 </li>
             </ul>
-            <div class="version-info">v3.22</div>
+            <div class="version-info">v3.23</div>
         </div>
     </div>
 
