--- a/index.html
+++ b/index.html
@@ -4186,8 +4186,9 @@
     <div class="divider-flow"></div>
 
     <div class="row">
-        <span class="label">本月資金成本</span>
+        <span class="label">資金成本</span>
         <input type="text" id="monthlyCost" value="2.2165" class="readonly" readonly>
+	<span class="helper-text">7月</span>
     </div>
 
     <div class="row">
