--- a/index.html
+++ b/index.html
@@ -3985,8 +3985,7 @@
         <div class="row">
             <span class="label">期數</span>
             <input type="text" id="period" step="0.1" readonly>
-            <button onclick="calculatePeriod()">算</button>
-            <button onclick="clearField('period')">清</button>
+            <button onclick="clearField('period')">清除</button>
         </div>
     
         <div id="periodButtons">
@@ -4005,8 +4004,7 @@
         <div class="row">
             <span class="label">稅前利率</span>
             <input type="text" id="rate" step="0.001" readonly>
-            <button onclick="calculateRate()">算</button>
-            <button onclick="clearField('rate')">清</button>
+            <button onclick="clearField('rate')">清除</button>
         </div>
 
         <div id="rateButtons">
@@ -4024,8 +4022,7 @@
         <div class="row">
             <span class="label">本金</span>
             <input type="text" id="principal" min="0" readonly>
-            <button onclick="calculatePrincipal()">算</button>
-            <button onclick="clearField('principal')">清</button>
+            <button onclick="clearField('principal')">清除</button>
         </div>
 
         <div id="principalButtons">
@@ -4042,8 +4039,7 @@
         <div class="row">
             <span class="label">期繳</span>
             <input type="text" id="payment" step="0.01" readonly>
-            <button onclick="calculatePayment()">算</button>
-            <button onclick="clearField('payment')">清</button>
+            <button onclick="clearField('payment')">清除</button>
         </div>
 
         <div id="PaymentduringButtons">
@@ -4106,8 +4102,7 @@
         <div class="row">
             <span class="label">推廣</span>
             <input type="text" id="commission" min="0" step="1" readonly>
-            <button onclick="calculateAfterCommissionRate()">算</button>
-            <button onclick="clearCommission()">清</button>
+            <button onclick="clearCommission()">清除</button>
         </div>
 
         <div id="commissionButtons">
@@ -9891,7 +9886,7 @@
                     <span>🌐 語言</span> <span class="menu-item-arrow">▶</span>
                 </li>
             </ul>
-            <div class="version-info">v3.80</div>
+            <div class="version-info">v3.82</div>
         </div>
     </div>
 
