--- a/instructions/check_instruction.html
+++ b/instructions/check_instruction.html
@@ -735,7 +735,7 @@
     * 關閉說明按鈕
     * 說明：呼叫父頁面的關閉函數來關閉iframe說明頁面
     * ============================================ -->
-    <button class="close-button" onclick="parent.closeCheckInstructionPage()">關閉說明</button>
+    <button class="close-button" onclick="parent.closeInstructionPage()">關閉說明</button>
 
     <!-- ============================================
     * 頁面載入完成後的初始化腳本
